@@ -18,7 +18,7 @@ proj.directory-list = [{'dirloc': loc('.'),
                         'watch_for_changes': 1}]
 proj.file-type = 'normal'
 [user attributes]
-cache.last-mime-type = {loc('unknown:<untitled> #25'): 'text/plain'}
+cache.last-mime-type = {loc('unknown:<untitled> #130'): 'text/plain'}
 debug.err-values = {None: {}}
 edit.file-encoding = {loc('test/io/TestPushback.py'): 'UTF-8'}
 guimgr.overall-gui-state = {'windowing-policy': 'combined-window',
@@ -67,8 +67,9 @@ guimgr.overall-gui-state = {'windowing-policy': 'combined-window',
                                0,
                                {'tree-state': {'tree-states': {'deep': {'col'\
         'umn-widths': [1.0],
-        'expanded-nodes': [],
-        'selected-nodes': [],
+        'expanded-nodes': [(3,)],
+        'selected-nodes': [(3,
+                            10)],
         'top-node': (0,)}},
         'tree-style': 'deep'}}),
                               ('python-shell',
@@ -86,32 +87,32 @@ guimgr.overall-gui-state = {'windowing-policy': 'combined-window',
                                1,
                                {'fScope': {'fFileSetName': u'All Source Files',
         'fLocation': None,
-        'fRecursive': 1,
+        'fRecursive': True,
         'fType': 'project-files'},
                                 'fSearchSpec': {'fEndPos': None,
-        'fIncludeLinenos': 1,
-        'fInterpretBackslashes': 0,
-        'fMatchCase': 0,
-        'fOmitBinary': 1,
+        'fIncludeLinenos': True,
+        'fInterpretBackslashes': False,
+        'fMatchCase': False,
+        'fOmitBinary': True,
         'fRegexFlags': 46,
         'fReplaceText': '',
-        'fReverse': 0,
-        'fSearchText': '',
+        'fReverse': False,
+        'fSearchText': u'',
         'fStartPos': 0,
         'fStyle': 'text',
-        'fWholeWords': 0,
-        'fWrap': 1},
-                                'fUIOptions': {'fAutoBackground': 1,
+        'fWholeWords': False,
+        'fWrap': True},
+                                'fUIOptions': {'fAutoBackground': True,
         'fFilePrefix': 'short-file',
-        'fFindAfterReplace': 1,
-        'fInSelection': 0,
-        'fIncremental': 1,
-        'fReplaceOnDisk': 0,
-        'fShowFirstMatch': 0,
-        'fShowLineno': 1,
-        'fShowReplaceWidgets': 0},
-                                'replace-entry-expanded': 0,
-                                'search-entry-expanded': 0}),
+        'fFindAfterReplace': True,
+        'fInSelection': False,
+        'fIncremental': True,
+        'fReplaceOnDisk': False,
+        'fShowFirstMatch': False,
+        'fShowLineno': True,
+        'fShowReplaceWidgets': False},
+                                'replace-entry-expanded': False,
+                                'search-entry-expanded': False}),
                               ('source-assistant',
                                'tall',
                                2,
@@ -441,16 +442,14 @@ guimgr.overall-gui-state = {'windowing-policy': 'combined-window',
         'sel-line-start': 0,
         'selection_end': 0,
         'selection_start': 0},
-                           loc('grizzled/io.py'): {'attrib-starts': [('Pushb'\
-        'ackFile',
-        158),
-        ('PushbackFile.read',
-         192)],
-        'first-line': 179,
-        'sel-line': 211,
-        'sel-line-start': 5979,
-        'selection_end': 5979,
-        'selection_start': 5979},
+                           loc('grizzled/io.py'): {'attrib-starts': [('AutoF'\
+        'lush',
+        17)],
+        'first-line': 149,
+        'sel-line': 19,
+        'sel-line-start': 514,
+        'selection_end': 514,
+        'selection_start': 514},
                            loc('grizzled/optparser.py'): {'attrib-starts': [],
         'first-line': 0,
         'sel-line': 6,
@@ -474,43 +473,7 @@ guimgr.overall-gui-state = {'windowing-policy': 'combined-window',
         'selection_end': 1093,
         'selection_start': 1093}},
          'has-focus': False},
-        {'bookmarks': ([[loc('../../../../Applications/WingIDE.app/Contents/MacOS/resources/doc/en/TOC.idx'),
-                         {'displayed-index': 43,
-                          'viewer-state': {'history': [-1,
-        43,
-        74],
-        'history-pos': 1,
-        'index': 43,
-        'top': (33,
-                1172)}},
-                         1208220719.8952689],
-                        (loc('grizzled/file/__init__.py'),
-                         {'attrib-starts': [('copyRecursively',
-        55)],
-                          'first-line': 40,
-                          'sel-line': 55,
-                          'sel-line-start': 1583,
-                          'selection_end': 1603,
-                          'selection_start': 1587},
-                         1208290670.4300139),
-                        (loc('grizzled/file/__init__.py'),
-                         {'attrib-starts': [('copy',
-        100)],
-                          'first-line': 87,
-                          'sel-line': 105,
-                          'sel-line-start': 3419,
-                          'selection_end': 3419,
-                          'selection_start': 3419},
-                         1208295584.032558),
-                        [loc('unknown:<untitled> #26'),
-                         {'attrib-starts': [],
-                          'first-line': 0,
-                          'sel-line': 0,
-                          'sel-line-start': 0,
-                          'selection_end': 0,
-                          'selection_start': 0},
-                         1208312881.6453869],
-                        (loc('grizzled/file/__init__.py'),
+        {'bookmarks': ([(loc('grizzled/file/__init__.py'),
                          {'attrib-starts': [('copyRecursively',
         55)],
                           'first-line': 52,
@@ -641,16 +604,55 @@ guimgr.overall-gui-state = {'windowing-policy': 'combined-window',
                           'selection_end': 0,
                           'selection_start': 0},
                          1209348221.7289441),
-                        [loc('test/io/TestPushback.py'),
+                        (loc('test/io/TestPushback.py'),
+                         {'attrib-starts': [('TestPushback',
+        22),
+        ('TestPushback.testPushback',
+         24)],
+                          'first-line': 0,
+                          'sel-line': 29,
+                          'sel-line-start': 812,
+                          'selection_end': 840,
+                          'selection_start': 840},
+                         1209348222.4659531),
+                        [loc('../../../../../../usr/lib/wingide3.0/resources/doc/en/TOC.idx'),
+                         {'displayed-index': 0,
+                          'viewer-state': {'history': [-1,
+        0],
+        'history-pos': 1,
+        'index': 0,
+        'top': (0,
+                0)}},
+                         1209404238.6622419],
+                        (loc('test/io/TestPushback.py'),
+                         {'attrib-starts': [('TestPushback',
+        22),
+        ('TestPushback.testPushback',
+         24)],
+                          'first-line': 0,
+                          'sel-line': 29,
+                          'sel-line-start': 812,
+                          'selection_end': 840,
+                          'selection_start': 840},
+                         1209404241.4361191),
+                        (loc('grizzled/__init__.py'),
                          {'attrib-starts': [],
                           'first-line': 0,
                           'sel-line': 0,
                           'sel-line-start': 0,
                           'selection_end': 0,
                           'selection_start': 0},
-                         1209348222.4659531]],
+                         1209404259.0927999),
+                        [loc('grizzled/os.py'),
+                         {'attrib-starts': [],
+                          'first-line': 0,
+                          'sel-line': 0,
+                          'sel-line-start': 0,
+                          'selection_end': 0,
+                          'selection_start': 0},
+                         1209404283.2726209]],
                        19),
-         'current-loc': loc('test/io/TestPushback.py'),
+         'current-loc': loc('grizzled/os.py'),
          'editor-states': {loc('grizzled/__init__.py'): {'attrib-starts': [],
         'first-line': 0,
         'sel-line': 0,
@@ -703,21 +705,21 @@ guimgr.overall-gui-state = {'windowing-policy': 'combined-window',
         'selection_end': 0,
         'selection_start': 0},
                            loc('grizzled/os.py'): {'attrib-starts': [],
-        'first-line': 0,
-        'sel-line': 0,
-        'sel-line-start': 0,
-        'selection_end': 0,
-        'selection_start': 0},
+        'first-line': 4,
+        'sel-line': 41,
+        'sel-line-start': 1142,
+        'selection_end': 1161,
+        'selection_start': 1161},
                            loc('test/io/TestPushback.py'): {'attrib-starts': [(''\
         'TestPushback',
         22),
         ('TestPushback.testPushback',
          24)],
         'first-line': 0,
-        'sel-line': 53,
-        'sel-line-start': 1352,
-        'selection_end': 1380,
-        'selection_start': 1380}},
+        'sel-line': 29,
+        'sel-line-start': 812,
+        'selection_end': 840,
+        'selection_start': 840}},
          'has-focus': True}),
                                'open_files': [u'grizzled/cmdline.py',
         u'grizzled/collections.py',
@@ -726,12 +728,12 @@ guimgr.overall-gui-state = {'windowing-policy': 'combined-window',
         u'grizzled/decorators.py',
         u'grizzled/exception.py',
         u'grizzled/file/__init__.py',
-        u'grizzled/__init__.py',
         u'grizzled/file/includer.py',
-        u'grizzled/optparser.py',
-        u'grizzled/os.py',
         u'grizzled/io.py',
-        u'test/io/TestPushback.py']},
+        u'grizzled/optparser.py',
+        u'test/io/TestPushback.py',
+        u'grizzled/__init__.py',
+        u'grizzled/os.py']},
         'split_percents': {0: 0.5},
         'splits': 1,
         'tab_location': 'top',
@@ -742,10 +744,10 @@ guimgr.overall-gui-state = {'windowing-policy': 'combined-window',
                  'user_data': {}},
         'window-alloc': (0,
                          25,
-                         1272,
-                         944)},
+                         1671,
+                         972)},
         {'name': 'nz8sdCZFY1fM2ZHHgdqsqa9sPhFohhIY',
-         'size-state': '',
+         'size-state': 'iconified',
          'type': 'panel-tall',
          'view': {'area': 'window-wide',
                   'current_pages': [0],
@@ -764,22 +766,14 @@ guimgr.overall-gui-state = {'windowing-policy': 'combined-window',
                   'splits': 1,
                   'tab_location': 'top',
                   'user_data': {}},
-         'window-alloc': (259,
-                          496,
-                          1011,
+         'window-alloc': (168,
+                          378,
+                          1102,
                           116)}]}
-guimgr.recent-documents = [loc('test/io/TestPushback.py'),
-                           loc('grizzled/os.py'),
-                           loc('grizzled/optparser.py'),
-                           loc('grizzled/io.py'),
-                           loc('grizzled/file/includer.py'),
+guimgr.recent-documents = [loc('grizzled/os.py'),
                            loc('grizzled/__init__.py'),
-                           loc('grizzled/file/__init__.py'),
-                           loc('grizzled/exception.py'),
-                           loc('grizzled/decorators.py'),
-                           loc('grizzled/db/__init__.py'),
-                           loc('grizzled/config.py'),
-                           loc('grizzled/collections.py')]
+                           loc('test/io/TestPushback.py'),
+                           loc('grizzled/io.py')]
 guimgr.visual-state = {loc('grizzled/collections.py'): {'attrib-starts': [],
         'first-line': 0,
         'sel-line': 0,
@@ -798,69 +792,76 @@ guimgr.visual-state = {loc('grizzled/collections.py'): {'attrib-starts': [],
         'sel-line-start': 0,
         'selection_end': 0,
         'selection_start': 0},
-                       loc('unknown:<untitled> #23'): {'attrib-starts': [],
+                       loc('unknown:<untitled> #129'): {'attrib-starts': [],
         'first-line': 0,
         'history': {},
         'sel-line': 0,
         'sel-line-start': 0,
         'selection_end': 0,
         'selection_start': 0},
-                       loc('unknown:<untitled> #34'): {'attrib-starts': [],
+                       loc('unknown:<untitled> #132'): {'attrib-starts': [],
         'first-line': 0,
         'history': {},
         'sel-line': 0,
         'sel-line-start': 0,
-        'selection_end': 4,
-        'selection_start': 4},
-                       loc('unknown:<untitled> #24'): {'attrib-starts': [],
+        'selection_end': 0,
+        'selection_start': 0},
+                       loc('unknown:<untitled> #140'): {'attrib-starts': [],
+        'first-line': 0,
+        'history': {},
+        'sel-line': 0,
+        'sel-line-start': 0,
+        'selection_end': 0,
+        'selection_start': 0},
+                       loc('unknown:<untitled> #137'): {'attrib-starts': [],
+        'first-line': 0,
+        'history': {},
+        'sel-line': 0,
+        'sel-line-start': 0,
+        'selection_end': 0,
+        'selection_start': 0},
+                       loc('unknown:<untitled> #134'): {'attrib-starts': [],
         'first-line': 0,
         'history': {},
         'sel-line': 3,
         'sel-line-start': 180,
         'selection_end': 184,
         'selection_start': 184},
-                       loc('unknown:<untitled> #27'): {'attrib-starts': [],
+                       loc('unknown:<untitled> #135'): {'attrib-starts': [],
         'first-line': 0,
         'history': {},
         'sel-line': 0,
         'sel-line-start': 0,
         'selection_end': 0,
         'selection_start': 0},
-                       loc('unknown:<untitled> #28'): {'attrib-starts': [],
+                       loc('unknown:<untitled> #141'): {'attrib-starts': [],
         'first-line': 0,
         'history': {},
         'sel-line': 0,
         'sel-line-start': 0,
         'selection_end': 0,
         'selection_start': 0},
-                       loc('unknown:<untitled> #29'): {'attrib-starts': [],
+                       loc('unknown:<untitled> #133'): {'attrib-starts': [],
         'first-line': 0,
         'history': {},
         'sel-line': 0,
         'sel-line-start': 0,
-        'selection_end': 0,
-        'selection_start': 0},
-                       loc('unknown:<untitled> #30'): {'attrib-starts': [],
-        'first-line': 0,
-        'history': {},
-        'sel-line': 0,
-        'sel-line-start': 0,
-        'selection_end': 0,
-        'selection_start': 0},
-                       loc('unknown:<untitled> #31'): {'attrib-starts': [],
+        'selection_end': 4,
+        'selection_start': 4},
+                       loc('unknown:<untitled> #139'): {'attrib-starts': [],
         'first-line': 0,
         'sel-line': 0,
         'sel-line-start': 0,
         'selection_end': 60,
         'selection_start': 0},
-                       loc('unknown:<untitled> #32'): {'attrib-starts': [],
+                       loc('unknown:<untitled> #136'): {'attrib-starts': [],
         'first-line': 0,
         'history': {},
         'sel-line': 0,
         'sel-line-start': 0,
         'selection_end': 0,
         'selection_start': 0},
-                       loc('unknown:<untitled> #33'): {'attrib-starts': [],
+                       loc('unknown:<untitled> #138'): {'attrib-starts': [],
         'first-line': 0,
         'history': {},
         'sel-line': 0,
